--- a/main.html
+++ b/main.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>3 random audios</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	section>
-    <h1>History</h1>
-    <b>Main articles:</b> History of blogging and online diary
-    <p>An early example of a "diary" style blog consisting of text and images transmitted wirelessly in real-time from a wearable computer with head-up display, February 22, 1995. The term "weblog" was coined by Jorn Barger[13] on December 17, 1997. The short form, "blog", was coined by Peter Merholz, who jokingly broke the word weblog into the phrase we blog in the sidebar of his blog Peterme.com in April or May 1999. Shortly thereafter, Evan Williams at Pyra Labs used "blog" as both a noun and verb ("to blog", meaning "to edit ones weblog or to post to ones weblog") and devised the term "blogger" in connection with Pyra Labs Blogger product, leading to the popularization of the terms.[17]</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Eastcampusfire_glog_crop.png/220px-Eastcampusfire_glog_crop.png" alt="Loding">
-
-    <h2>Origins</h2>
-    <p>Before blogging became popular, digital communities took many forms, including Usenet, commercial online services such as GEnie, Byte Information Exchange (BIX) and the early CompuServe, e-mail lists,[18] and Bulletin Board Systems (BBS).</p>
-</section>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <nav>
+    <ul>
+      <li><a href="#audio1">Audio 1</a></li>
+      <li><a href="#audio2">Audio 2</a></li>
+      <li><a href="#audio3">Audio 3</a></li>
+    </ul>
+  </nav>
+  <h1>3 random audios</h1>
+  <audio controls id="audio1">
+    <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+  <audio controls id="audio2">
+    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
+  </audio>
+  <audio controls id="audio3">
+    <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 </body>
-
 </html>
